Use apache commons Base64, use System.out not logger.